--- a/src/app/display-products/display-products.component.html
+++ b/src/app/display-products/display-products.component.html
@@ -236,7 +236,7 @@
     </div>
     <div class="container py-2 ">
         <div class="row " >
-            <div class=" col-sm-2 col-md-3 col-xl-3 " *ngFor="let a of products">
+            <div class=" col-sm-2 col-md-3 col-xl-3 " *ngFor="let a of products; let i=index">
                 <div class="card " (click)="selectedProd(a)">
                     <div data-toggle="modal" data-target="#noticeModal ">
                         <div >
@@ -267,16 +267,16 @@
                         </div>
                     </div>
                     <div class="d-flex justify-content-between ">
-                        <div class="btn btn-primary buy ">
+                        <div class="btn btn-primary buy " (click)="saveCart(a)">
                             Buy Now
                         </div>
                         <div class="btn-group btn-group-sm ">
-                            <button class="btn btn-outline-default btn-round " (click)="decre() "> <i
+                            <button class="btn btn-outline-default btn-round " (click)="decre(i) "> <i
                                     class="nc-icon nc-simple-delete "></i> </button>
                             <div class="Quantity ">
-                                {{quantity}}
+                                {{a.quant}}
                             </div>
-                            <button class="btn btn-outline-default btn-round " (click)="incre() "> <i
+                            <button class="btn btn-outline-default btn-round " (click)="incre(i) "> <i
                                     class="nc-icon nc-simple-add "></i> </button>
                         </div>
                     </div>
