--- a/src/app/display-products/display-products.component.html
+++ b/src/app/display-products/display-products.component.html
@@ -11,7 +11,17 @@
                 <div class="modal-body ">
                     <div class="row">
                         <div class="col-sm-6 col-md-6 col-xl-6">
-                            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                            <div class=" page-carousel">
+                                <ngb-carousel>
+                                  <ng-template ngbSlide *ngFor="let b of images">
+                                    <img src="http://localhost:8090{{b.listimages}}" 
+                                      alt="Random first slide">
+                                    <div class="carousel-caption">
+                                    </div>
+                                  </ng-template>
+                                </ngb-carousel>
+                              </div>
+                            <!-- <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                                 <div class="carousel-inner">
 
                                     <div class="carousel-item active">
@@ -26,14 +36,7 @@
                                                 alt="Laptop " />
                                         </h6>
                                     </div>
-                                    <!-- <div class="carousel-item ">
-                                        <h6 >
-                                        <img src="http://localhost:8090{{selctpr.listimages}}" class="card-img-top " alt="Laptop " />   </h6>                        
-            
-                                    </div> -->
-                                    <!-- <div class="carousel-item">
-                                        <img src="https://source.unsplash.com/1600x900?salon,barber" class="d-block w-100" alt="...">
-                                    </div> -->
+                                    
                                 </div>
                                 <a class="carousel-control-prev" href="#carouselExampleFade" role="button"
                                     data-slide="prev">
@@ -41,11 +44,11 @@
                                     <span class="sr-only">Previous</span>
                                 </a>
                                 <a class="carousel-control-next" href="#carouselExampleFade" role="button"
-                                    data-slide="next">
+                                    data-slide="next" style="color: black;">
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Next</span>
                                 </a>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="col-sm-6 col-md-6 col-xl-6">
                             <!-- <div [{ngModel}]="productsModel.name"></div> -->
@@ -76,12 +79,12 @@
                                         aria-label="cartclose"><span><i class="fas fa-shopping-cart"></i></span> Add to
                                         Cart</button>
                                     <div class="btn-group btn-group-sm col-3">
-                                        <button class="btn btn-outline-default btn-round" (click)="decre()"> <i
+                                        <button class="btn btn-outline-default btn-round" (click)="decre(selctpr.index)"> <i
                                                 class="nc-icon nc-simple-delete "></i> </button>
-                                        <div class="Quantity">
-                                            {{quantity}}
+                                        <div class="Quantity" value="" [(ngModel)]="selctpr.quant" >{{selctpr.quant}}
+                                        
                                         </div>
-                                        <button class="btn btn-outline-default btn-round" (click)="incre()"> <i
+                                        <button class="btn btn-outline-default btn-round" (click)="incre(selctpr.index)"> <i
                                                 class="nc-icon nc-simple-add "></i> </button>
                                     </div>
                                 </div>
@@ -268,84 +271,41 @@
     <div class="container py-2 ">
         <div class="row ">
             <div class=" col-sm-2 col-md-3 col-xl-3 " *ngFor="let a of products; let i=index">
-                <div class="card " (click)="selectedProd(a)">
-                    <div data-toggle="modal" data-target="#noticeModal ">
-                        <div>
-                            <h6>
-                                <img src="http://localhost:8090{{a.image}}" class="card-img-top " alt="Laptop " />
-                            </h6>
-                            <div class="row ">
-                                <div class=" col-sm-3 col-md-3 col-lg-3 col-xl-3 " *ngFor="let a of products">
-                                    <div class="card " (click)="selectedProd(a)">
-                                        <div data-toggle="modal" data-target="#noticeModal ">
-                                            <div>
-                                                <h6>
-                                                    <img src="http://localhost:8090{{a.image}}" class="card-img-top "
-                                                        alt="Laptop " />
-                                                </h6>
-                                            </div>
-                                            <div class="card-body ">
-                                                <div class="row justify-content-between d-flex ">
-                                                    <div class="col-sm-8 col-9">
-                                                        <div>
-                                                            <h6>{{a.name}}</h6>
+                <div class="card">
+                    <div class="card-body " data-target="#noticeModal" data-toggle="modal" (click)="selectedProd(a,i)">
+                        <div class="row justify-content-between d-flex ">
+                            <img src="http://localhost:8090{{a.image}}" class="card-img-top " alt="Laptop " />
 
-
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-sm-4 col-3 ">
-                                                            <div>
-                                                                <h6> ${{a.price}}</h6>
-
-
-                                                            </div>
-                                                    </div>
-                                                    <div class="col-sm-4 col-3 ">
-                                                        <b>
-                                                            <div>
-                                                                <h6> ${{a.price}}</h6>
-
-
-                                                            </div>
-                                                        </b>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="d-flex justify-content-between ">
-                                            <div class="btn btn-primary buy " (click)="saveCart(a)">
-                                                Buy Now
-                                            </div>
-                                            <div class="btn-group btn-group-sm ">
-                                                <button class="btn btn-outline-default btn-round " (click)="decre(i) ">
-                                                    <i class="nc-icon nc-simple-delete "></i> </button>
-                                                <div class="Quantity ">
-                                                    {{a.quant}}
-                                                </div>
-                                                <button class="btn btn-outline-default btn-round " (click)="incre(i) ">
-                                                    <i class="nc-icon nc-simple-add "></i> </button>
-                                                <!-- </b> -->
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="d-flex justify-content-between ">
-                                    <div class="btn btn-primary buy ">
-                                        Buy Now
-                                    </div>
-                                    <div class="btn-group btn-group-sm ">
-                                        <button class="btn btn-outline-default btn-round " (click)="decre() "> <i
-                                                class="nc-icon nc-simple-delete "></i> </button>
-                                        <div class="Quantity ">
-                                            {{quantity}}
-                                        </div>
-                                        <button class="btn btn-outline-default btn-round " (click)="incre() "> <i
-                                                class="nc-icon nc-simple-add "></i> </button>
-                                    </div>
-                                </div>
+                            <div class="col-sm-8">
+                                    <h6>{{a.name}}</h6>
+                            </div>
+                            <div class="col-sm-4">
+                                    <h6> ₹ {{a.price}}</h6>
+                            </div>
+                            <div class="col-sm-12">
+                                        <h6>
+                                            <span>{{a.category}}</span>
+                                        </h6>
                             </div>
                         </div>
-
                     </div>
-
-                </div>`
+                    <div class="d-flex justify-content-between ">
+                        <div class="btn btn-primary buy " (click)="saveCart(a)">
+                            Buy Now
+                        </div>
+                        <div class="btn-group btn-group-sm ">
+                            <button class="btn btn-outline-default btn-round " (click)="decre(i) ">
+                                <i class="nc-icon nc-simple-delete "></i> </button>
+                            <div class="Quantity ">
+                                {{a.quant}}
+                            </div>
+                            <button class="btn btn-outline-default btn-round " (click)="incre(i) ">
+                                <i class="nc-icon nc-simple-add "></i> </button>
+                            <!-- </b> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
