--- a/src/app/pages/customer-register/customer-register.component.html
+++ b/src/app/pages/customer-register/customer-register.component.html
@@ -9,7 +9,7 @@
         </button>
       </div>
       <a class="navbar-brand" routerLinkActive="active" href="http://127.0.0.1:5500/index.html">
-        <img style="max-height: 70px;" src="../../../assets/img/Bag Design.png">
+        <img style="max-height: 70px;" src="../../../assets/img/logo1.png">
         <!-- <img style="max-height: 40px;" src="../../../assets/img/logo1.png"> -->
       </a>
     </div>
@@ -48,7 +48,7 @@
 </nav>
 <div class="wrapper wrapper-full-page">
   <div class="full-page register-page section-image" filter-color="black"
-    data-image="./assets/img/bg/jan-sendereks.jpg">
+    data-image="./assets/img/bg/map-banner.jpg">
     <div class="content">
       <div class="container">
         <div class="row">
@@ -191,6 +191,10 @@
                     </label>
                   </div> -->
                   <div class="card-footer ">
+                    <div class="form-group">
+                      <a routerLink='/pages/forgotpwd' style="font-weight: 500;">Forgot Password ?</a>
+                      <a routerLink='/pages/login' style="font-weight: 500; padding-left: 80px">Login</a>
+                    </div>
                     <!-- <a href="javascript:void(0)" class="btn btn-info btn-round">Get Started</a> -->
                     <button type="submit" (click)="verification()" class="btn btn-info btn-round" [disabled]="!forgotForm.form.valid || !selectedRole" >
                       Get Started
