--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -9,7 +9,7 @@
         </button>
       </div>
       <a class="navbar-brand" routerLinkActive="active" href="http://127.0.0.1:5500/index.html">
-        <img style="max-height: 70px;" src="../../../assets/img/Bag Design.png">
+        <img style="max-height: 70px;" src="../../../assets/img/logo1.png">
         <!-- <img style="max-height: 40px;" src="../../../assets/img/logo1.png"> -->
       </a>
     </div>
@@ -97,7 +97,7 @@
                   <a routerLink='/pages/forgotpwd' style="font-weight: 500;">Forgot Password ?</a>
                   <a routerLink='/pages/customer-register' style="font-weight: 500; padding-left: 80px">Register
                     here</a>
-                    <!-- <a routerLink='/pages/otp' style="font-weight: 500;">Otp</a> -->
+                  <!-- <a routerLink='/pages/otp' style="font-weight: 500;">Otp</a> -->
                   <!-- <div class="form-check">
                                         <label class="form-check-label">
                                             <input class="form-check-input" type="checkbox" value="" checked="">
