--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -8,3 +8,9 @@
     padding: 5%;
     height: 1em;
 }
+.points{
+    text-align: center !important;
+    font-size: 16px !important;
+    font-weight:600 !important;
+    color: green !important    ;
+}
