--- a/src/assets/scss/paper-dashboard/_navbar.scss
+++ b/src/assets/scss/paper-dashboard/_navbar.scss
@@ -221,7 +221,7 @@
     &.navbar-transparent{
       background-color: $transparent-bg !important;
       box-shadow: none;
-      border-bottom: 1px solid #ddd;
+    //   border-bottom: 1px solid #ddd;
 
       a:not(.dropdown-item):not(.btn){
         color: $default-color;
