--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
         <div class="info">
             <a data-toggle="collapse" href="#collapseExample" class="collapsed">
                 <div class="row">
-                    <span class="fa fa-star" style="color: gold" *ngIf="vip==1"></span>&nbsp;{{userName}}
+                    <span class="fa fa-star" style="color: gold" ></span>&nbsp;est
                 </div>
                 <span style="color:gold">(Members)</span>
                
