--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -20,12 +20,15 @@
         <div class="info">
             <a data-toggle="collapse" href="#collapseExample" class="collapsed">
                 <div class="row">
-                    <span class="fa fa-star" style="color: gold" *ngIf="vip==1"></span>&nbsp;{{userName}}
+                    <span class="fa fa-star" style="color: gold" *ngIf="vip==1">
+                    </span>&nbsp;{{userName}}
+                    <b class="caret"></b>
+
                 </div>
                 <span style="color:gold">(Members)</span>
-               
-                    <!-- <b class="caret"></b> -->
-               
+
+                <!-- <b class="caret"></b> -->
+
             </a>
             <div class="clearfix"></div>
             <div class="collapse" id="collapseExample">
